<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ArmyOfNerds</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">If your name isn\'t Adrian, you probably shouldn\'t be here and you can\'t do anything anyways</string>
    <string name="Main_Title">Army Of NERDS</string>
    <string name="btn_start">START</string>
    <string name="nerd_pic1">Picture of a Nerd</string>
    <string name="nerd_pic2">Picture of another nerd</string>
    <string name="btn_credits">Credits</string>
    <string name="btn_quit">quit</string>
    <string name="mainPicture">the picture on the main activity</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="madeBy">Made By Adrian Kim</string>
    <string name="backFromCredit">Back</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="nameEnter">Enter Your Name</string>
    <string name="nameExample">e.g. Humphrey</string>
    <string name="playAfterName">Next</string>
    <string name="backToMainMenu">Back</string>
    <string name="title_activity_story">StoryActivity</string>
    <string name="storyz">Sweat drops from the razor sharp edge of a dark, wooden pencil. Gripping the pencil is a scrawny student who looks to have been traumatized by what has just happened. Not only did he witness mental ownage of his fellow classmate, he could feel the enemy\'s brain waves shake his half paralyzed brain. The war amongst nerds has started. Gather your nerd troops and conquer the world!</string>
    <string name="playFromStory">Next</string>
    <string name="title_activity_play_main">PlayMainActivity</string>
    <string name="playerNameDisplay">Name\'s Empire</string>
    <string name="nerdArmySize">"Size of Nerd Army : "</string>
    <string name="nerdLevel">"Average Nerd Level : "</string>
    <string name="universityDominated">"Number of Universities Defeated : "</string>
    <string name="weapon">Weapon : </string>
    <string name="money">"Money : "</string>
    <string name="fightButtonString">FIGHT!</string>
    <string name="upgradeButtonString">UPGRADE</string>
    <string name="quitButtonString">Quit to Main menu</string>
    <string name="title_activity_upgrade">UpgradeActivity</string>
    <string name="upgradeTitle">UPGRADES</string>
    <string name="recruitNerdBtn">Recruit Nerds</string>
    <string name="RaidGymBtn">Raid Gym (Loi + Lvl)</string>
    <string name="raidLibrarybtn">Raid Library (Weapon Shop)</string>
    <string name="gamblebtn">Gamble</string>
    <string name="eatDoubleBurgerBtn">Eat Double Burger (lvl)</string>
    <string name="backToMenuFromUpgrade">BACK</string>
    <string name="title_activity_raid_gym">RaidGymActivity</string>
    <string name="GymTimeID">How Many Minutes at the Gym?</string>
    <string name="gymMinutesOKBtnstr">OK</string>
    <string name="moneyLeftGym">Exp to be gained</string>
    <string name="moneyLeftAtGymAmountStr">amount</string>
    <string name="gymCostStr">Rate: 1 Minute = 27 Money</string>
    <string name="mainValueNerdsStr">Number of Nerds : value</string>
    <string name="mainValueNerdLevelStr">Level : value</string>
    <string name="mainValueWeaponStr">Weapon : value</string>
    <string name="mainValueMoneyStr">Money : value</string>
    <string name="title_activity_recruit_nerds">RecruitNerdsActivity</string>
    <string name="recruitNerdTitleStr">Recruit Nerds!</string>
    <string name="goClubStr">Go Clubbing</string>
    <string name="askNicelyStr">Ask Nicely (Requires at least 200 money to attempt) (40% chance to get mugged)</string>
    <string name="buySodaStr">Buy Ppl Soda (No Risk Factor)</string>
    <string name="playDotaStr">Play DotA (50% chance)</string>
    <string name="backToUpgradeFromNerdsStr">Back</string>
    <string name="nerdsToWorkOutStr">Attract Loi Chance</string>
    <string name="nNerdsToWorkOutValueID">value</string>
    <string name="estimatedCostForWorkOutStr">Estimated Cost</string>
    <string name="estimatedCostToWorkOutValueStr">value</string>
    <string name="recentChangeTitleStr">Last Action:</string>
    <string name="recentChangesActualStr">None</string>
    <string name="title_activity_ask_nicely">AskNicelyActivity</string>
    <string name="askNicelyTitleStr">Asking Nicely...</string>
    <string name="askStatusTitleStr">Status</string>
    <string name="askStatusActualStr">Status goes HERE</string>
    <string name="askAcceptBtnStr">Im Cool Wit Dis</string>
    <string name="tryAgainBtnStr">Cry like a BABY</string>
    <string name="title_activity_go_club">GoClubActivity</string>
    <string name="atTheClubTitleStr">At the Club</string>
    <string name="atcPickUpNerdsTitleStr">You picked up</string>
    <string name="atcPickUpNerdsActualStr">0 Nerds</string>
    <string name="atcOkBtnStr">OK</string>
    <string name="title_activity_buy_soda">BuySodaActivity</string>
    <string name="buySodaTitleStr">Buy Soda!</string>
    <string name="bsHowManySodaTitleStr">How many sodas to buy?</string>
    <string name="bsCostTitleStr">Estimated Cost</string>
    <string name="bsCostActualStr">value</string>
    <string name="estimatedNerdIncomeTitleStr">Estimated Nerds to join you</string>
    <string name="bsEstimatedNerdIncomeValueStr">value</string>
    <string name="bsBuySodaBtnTitleStr">Buy</string>
    <string name="rnShowMoneyTitleStr">Your Current Money</string>
    <string name="rnShowMoneyActualStr">value</string>
    <string name="uPlayerMoneyTitleStr">Current Money</string>
    <string name="uCurrentMoneyActualStr">value</string>
    <string name="title_activity_raid_library">RaidLibraryActivity</string>
    <string name="buyFromLibraryBtnStr">Buy</string>
    <string name="backFromLibraryToUpgradeBtnStr">Back</string>
    <string name="libraryListItemsStr">List</string>
    <string name="lBuyTitleStr">Buy Item</string>
    <string name="estimatedCostTitleID">Estimated Cost</string>
    <string name="estimatedCostActualStr">value</string>
    <string name="title_activity_gamble">GambleActivity</string>
    <string name="gamblingTitle">GAMBLING</string>
    <string name="gambleHowMuchTitleStr">How much money do you want to play with?</string>
    <string name="gambleBtnStr">GAMBLE</string>
    <string name="gambleAmountActualStr">0</string>
    <string name="gambleToggleStr">CROSS YO FINGERS</string>
    <string name="gambleStatusStr">Go Gamble!</string>
    <string name="title_activity_fight">FightActivity</string>
    <string name="fightTitleStr">Choose A Region! (increasing in difficulty)</string>
    <string name="backToMenuFromFightStr">BACK</string>
    <string name="mainValueExpStr">Experience : value/value</string>
    <string name="mainValueSuperNerdsStr">Number of Super Nerds : Value</string>
    <string name="mainValueAsiansStr">Number Of Asians : Value</string>
    <string name="mainValueBrainPowerStr">TOTAL BRAIN POWER : Value</string>
    <string name="title_activity_fight_info">FightInfoActivity</string>
    <string name="fightInfoTitleStr">FIGHT?</string>
    <string name="fiPlayerNameStr">Player\'s Info</string>
    <string name="fiPlayerNerdsStr">Number of Nerds : value</string>
    <string name="fiPlayerSuperNerdsStr">Number of Super Nerds : value</string>
    <string name="fiPlayerAsiansStr">Number of Asians : value</string>
    <string name="fiPlayerLevelStr">Level : Value</string>
    <string name="fiPlayerWeaponStr">Weapon : Value</string>
    <string name="fiPlayerBrainPowerStr">BRAIN POWER : Value</string>
    <string name="fiEnemyNameStr">Enemy\'s Info</string>
    <string name="fiEnemyNerdStr">Number of Nerds : value</string>
    <string name="fiEnemySuperNerdsStr">Number of Super Nerds : value</string>
    <string name="fiEnemyAsiansStr">Number of Asians : value</string>
    <string name="fiEnemyLevelStr">Level : value</string>
    <string name="fiEnemyWeaponStr">Weapon : value</string>
    <string name="fiEnemyBrainPowerStr">BRAIN POWER : VALUE</string>
    <string name="fiBackBtnStr">BACK</string>
    <string name="fiFightBtnStr">FIGHT</string>
    <string name="title_activity_fight_for_real">FightForRealActivity</string>
    <string name="fChromometerStr">chromometer</string>
    <string name="fTitleStr">Fighting...</string>
    <string name="fStatusStr">STATUS GOES HERE</string>
    <string name="fDoneBtnStr">Cheer until fight finishes!</string>
    <string name="fStatus2Str">BLAH 2</string>
    <string name="fPlayerAndEnemyScoreStr">PLAYER 0 VS ENEMY 0</string>
    <string name="fPlayerVsEnemyCurrentScoreStr">pPower > ePower</string>
    <string name="fCheerStr">CHEER</string>
    <string name="bsRadioNerdsStr">Nerds</string>
    <string name="bsSuperNerdsStr">Super Nerds</string>
    <string name="bsRadioAsiansStr">Asians</string>
    <string name="uSellNerdsStr">Sell Nerds!</string>
    <string name="title_activity_sell_nerds">SellNerdsActivity</string>
    <string name="sellNerdTitleStr">Selling Nerds!</string>
    <string name="sellNerdBtnStr">SELL</string>
    <string name="sellNerdMoneyTitleStr">"Nerds to Money Conversion : "</string>
    <string name="sellNerdsMoneyActualStr">0</string>
    <string name="sellNerdsAmountActualStr">0</string>
    <string name="sellNerdsRBtnStr">Nerds</string>
    <string name="sellSuperNerdsRBtnStr">Super Nerds</string>
    <string name="snAsianRBtnStr">Asians</string>
    <string name="mainValueLoiStr">Lang Loi : value</string>
    <string name="playMainSaveBtnStr">Save</string>
    <string name="title_activity_save">SaveActivity</string>
    <string name="btn_load">Load</string>
    <string name="title_activity_load">LoadActivity</string>
    <string name="saveTitleStr">Saving will Overwrite Existing Data!</string>
    <string name="sSaveBtnStr">SAVE</string>
    <string name="sLoadBtnStr">LOAD</string>
    <string name="sBackBtnID">BACK</string>
    <string name="loadTitleStr">Load Data</string>
    <string name="ldSlot1Str">Empty</string>
    <string name="ldSlot2Str">Empty</string>
    <string name="ldSlot3Str">Empty</string>
    <string name="ldBackBtnStr">Back</string>
    <string name="fiCostStr">Fight Cost : Value</string>
    <string name="title_activity_developer_mode">DeveloperModeActivity</string>
    <string name="developerLevelStr">Level</string>
    <string name="developerMoneyStr">Money</string>
    <string name="developerLangLoiStr">Loi</string>
    <string name="developerSetBtnStr">SET</string>
    <string name="developerBackBtnStr">BACK</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="helpTextStr">HELP INFO GOES HERE</string>
    <string name="helpDoneBtnStr">DONE</string>
    <string name="helpBtnTitleStr">Help</string>
    <string name="lgpasswordStr">Your Favorte 4 Digit Number :</string>
    <string name="iniStr">Initializing...</string>
    <string name="fIniCheer">0</string>
    <string name="title_activity_finish">FinishActivity</string>
    <string name="gambleChancesTvStr">Your Chances...</string>
    <string name="finishTitleStr">You just defeated Double Burger Coorperation!</string>
    <string name="finishEmailButtonStr">Let Adrian Know of this AMAZING feat!</string>
    <string name="title_activity_decrypt">DecryptActivity</string>
    <string name="title_activity_loi">LoiActivity</string>
    <string name="loiObtainStr">Gratz! Lang Loi Obtained!</string>
    <string name="title_activity_bye_bye_world">ByeByeWorldActivity</string>
    <string name="byeWorldStr">Bye Bye World! 1+1 = 2</string>

</resources>
