<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UpgradeActivity"
    android:background="@drawable/upgrade_back2"
     >

    <TextView
        android:id="@+id/upgradeTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/upgradeTitle"
       
        android:textStyle="bold"
        android:textSize="40sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/recruitNerdsID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upgradeTitleTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/recruitNerdBtn" />
    
        <Button
        android:id="@+id/sellNerdsID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recruitNerdsID"
        android:text="@string/uSellNerdsStr" />

    <Button
        android:id="@+id/raidGymID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sellNerdsID"
        android:layout_below="@+id/sellNerdsID"
        android:text="@string/RaidGymBtn" />

    <Button
        android:id="@+id/raidLibraryID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/raidGymID"
        android:layout_below="@+id/raidGymID"
        android:text="@string/raidLibrarybtn" />

    <Button
        android:id="@+id/gambleID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/raidLibraryID"
        android:text="@string/gamblebtn" />
    


    <Button
        android:id="@+id/backToMenuFromUpgradeID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sellNerdsID"
        android:layout_below="@+id/gambleID"
        android:text="@string/backToMenuFromUpgrade" />

    <TextView
        android:id="@+id/recentChangeTitleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/backToMenuFromUpgradeID"
        android:layout_below="@+id/backToMenuFromUpgradeID"
        android:text="@string/recentChangeTitleStr"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/recentChangesActualID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/recentChangeTitleID"
        android:text="@string/recentChangesActualStr"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/uCurrentMoneyTitleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recentChangesActualID"
        android:text="@string/uPlayerMoneyTitleStr"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/uCurrentMoneyActualID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/uCurrentMoneyTitleID"
        android:text="@string/uCurrentMoneyActualStr"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
