<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/main" >


    <Button
        android:id="@+id/startID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/btn_start"
        android:textStyle="bold" 
        android:textSize="30sp"/>
    
    <Button
        android:id="@+id/loadID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startID"
        android:layout_centerInParent="true"

        android:text="@string/btn_load"
        android:textSize="30sp"
        android:textStyle="bold" />
    
     <Button
         android:id="@+id/helpID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/loadID"
         android:layout_centerInParent="true"

         android:text="@string/helpBtnTitleStr"
         android:textSize="30sp"
         android:textStyle="bold" />

    <Button
        android:id="@+id/CreditsID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/helpID"
        android:layout_centerHorizontal="true"

        android:textSize="30sp"
        android:text="@string/btn_credits" />

    <Button
        android:id="@+id/quitID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CreditsID"
        android:layout_centerHorizontal="true"

        android:textSize="30sp"
        android:text="@string/btn_quit" />

    <TextView
        android:id="@+id/titleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startID"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/Main_Title"

        android:textSize="45sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/loiImageID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/titleID"
        android:layout_marginTop="0dp"
        android:src="@drawable/mtw" 
        android:contentDescription="@string/mainPicture"/>

</RelativeLayout>
