<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SaveActivity"
    android:background="@drawable/save">"

    <TextView
        android:id="@+id/saveTitleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/saveTitleStr"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/sSaveBtnID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saveTitleID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:text="@string/sSaveBtnStr" />

    <RadioGroup
        android:id="@+id/sRadioGroupID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saveTitleID"
        android:layout_centerHorizontal="true" >

        <RadioButton
            android:id="@+id/sSlot1ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ldSlot1Str" />

        <RadioButton
            android:id="@+id/sSlot2ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/ldSlot2Str" />

        <RadioButton
            android:id="@+id/sSlot3ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/ldSlot3Str" />
    </RadioGroup>

    <Button
        android:id="@+id/sQuitBtnID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/sSaveBtnID"
        android:layout_below="@+id/sSaveBtnID"
        android:layout_marginTop="16dp"
        android:text="@string/sBackBtnID" />

</RelativeLayout>